# aoc-2024

./: .gitignore  Cargo.toml  README.md  bench-results.txt  justfile  lol
benches/: aoc.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  grid.rs  lib.rs  mask.rs  util.rs  wrap.rs
src/grid/: direction.rs  position.rs
