[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["env", "derive"] }
color-eyre = "0.6.3"
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.11.1"
smallvec = "1.13.2"
tap = "1.0.1"
thiserror = "2.0.3"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "aoc"
harness = false
