[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.21", features = ["env", "derive"] }
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.11.1"
smallvec = "1.13.2"
tap = "1.0.1"
mimalloc = "0.1"
color-eyre = "0.6.3"
itertools = "0.13.0"
fxhash = "0.2.1"
derive_more = { version = "1.0.0", features = ["full"] }
cached = { version = "0.54.0", features = ["ahash"] }
ratatui = "0.29.0"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "aoc"
harness = false

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
